# arbitrage_scanner

./: .env.example  .gitignore  README.md  README_RU.md  pyproject.toml  Постановка задачи.md
notebooks/: ccxt_example.ipynb  pydantic.ipynb
src/pauchai_scanner/application/: find_opportunities_usecase.py
src/pauchai_scanner/config/: credentials.py  exchanges.py
src/pauchai_scanner/domain/: aggregators.py  arbitrage_calculator_service.py  entities.py  exceptions.py  interfaces.py  repository.py  value_objects.py
src/pauchai_scanner/endpoints/: cli.py
src/pauchai_scanner/infrastructure/: dtos.py  providers.py  repositories.py
src/pauchai_scanner/infrastructure/adapters/ccxt/: dtos.py  mappers.py
tests/application/find_arbitrage_oportunities/: test_arbitrage_opportunity.py
tests/domain/: test_arbitrage_calculator_service.py
tests/infrastructure/: test_ccxt_exchange_provider_unittest.py  test_inmemory_repository.py  test_mock_exchange_provider.py
tests/integration/: test_real_providers.py
