[tool.poetry]
name = "pauchai-scanner"
version = "0.1.0"
description = "Cryptocurrency arbitrage scanner"
authors = ["Pavel Khimyack <paul.khimyack@gmail.com>"]
readme = "README.md"
packages = [{include = "pauchai_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ccxt = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py312']